--- a/index.html
+++ b/index.html
@@ -5,25 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Month of Landings_external link</title>
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link href="./styles/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./vendor/fonts/font.css" />
   </head>
   <body class="page">
     <header class="header">
       <nav class="header__links">
         <a
-          class="header__link header__link_margin_right theme-text-white"
+          class="header__link"
           href="#coatings"
           >Покрытия и градиенты</a
         >
         <a
-          class="header__link header__link_margin_right theme-text-white"
+          class="header__link"
           href="#Bicycles"
           >Велосипеды</a
         >
         <a
-          class="header__link header__link_margin_right theme-text-white"
+          class="header__link"
           href="#workout"
           >Тренировки</a
         >
@@ -37,9 +35,9 @@
         <div class="header__popup-container">
           <div class="header__popup-header">
             <button class="header__button-x">
-              <img class="header__image-left" src="./images/Line.svg" alt="-" />
+              <img class="header__image-left-line" src="./images/Line.svg" alt="-" />
               <img
-                class="header__image-right"
+                class="header__image-right-line"
                 src="./images/Line.svg"
                 alt="-"
               />
@@ -47,26 +45,24 @@
           </div>
           <div class="header__popup-content">
             <nav class="header__popup-links">
-              <a class="header__link theme-text-white" href="#coatings"
+              <a class="header__link" href="#coatings"
                 >Покрытия и градиенты</a
               >
-              <a class="header__link theme-text-white" href="#Bicycles"
+              <a class="header__link" href="#Bicycles"
                 >Велосипеды</a
               >
-              <a class="header__link theme-text-white" href="#workout"
+              <a class="header__link" href="#workout"
                 >Тренировки</a
               >
             </nav>
             <div class="theme-button">
               <img class="theme-button__light" src="./images/day.svg" alt="" />
               <img class="theme-button__dark" src="./images/Sun.svg" alt="" />
-              <div class="theme-button__input-container">
                 <input
                   class="theme-button__toggle"
                   type="checkbox"
                   id="togglePopup"
                 />
-              </div>
               <img
                 class="theme-button__light"
                 src="./images/night.svg"
@@ -90,7 +86,6 @@
                 src="./images/forest.png"
                 alt=""
               />
-              <div class="flex-element__big-background"></div>
               <div class="flex-element__rim-bike-fix">
                 <img
                   class="flex-element__bike-fix"
@@ -98,7 +93,6 @@
                   alt=""
                 />
               </div>
-              <div class="flex-element__small-background"></div>
             </div>
 
             <p class="text-block__paragraph text-block__paragraph_theme_dark">
@@ -107,9 +101,7 @@
               велосипеда и отправиться в путь.
             </p>
           </div>
-          <form action="#" target="_blank">
             <button class="flex-element__button">Подробнее</button>
-          </form>
           <p class="flex-element__text-line">
             Cannondale Systemsix<img
               class="flex-element__long-line"
