--- a/index.html
+++ b/index.html
@@ -10,32 +10,24 @@
   <body class="page">
     <header class="header">
       <nav class="header__links">
-        <a
-          class="header__link"
-          href="#coatings"
-          >Покрытия и градиенты</a
-        >
-        <a
-          class="header__link"
-          href="#Bicycles"
-          >Велосипеды</a
-        >
-        <a
-          class="header__link"
-          href="#workout"
-          >Тренировки</a
-        >
+        <a class="header__link" href="#coatings">Покрытия и градиенты</a>
+        <a class="header__link" href="#bicycle">Велосипеды</a>
+        <a class="header__link" href="#workout">Тренировки</a>
       </nav>
       <button class="header__button">
-        <img class="header__image-line" src="./images/Line.svg" alt="-" />
-        <img class="header__image-line" src="./images/Line.svg" alt="-" />
-        <img class="header__image-line" src="./images/Line.svg" alt="-" />
+        <img class="header__image-line" src="./images/Line.svg" alt="Кнопка" />
+        <img class="header__image-line" src="./images/Line.svg" alt="Кнопка" />
+        <img class="header__image-line" src="./images/Line.svg" alt="Кнопка" />
       </button>
       <div class="header__popup">
         <div class="header__popup-container">
           <div class="header__popup-header">
             <button class="header__button-x">
-              <img class="header__image-left-line" src="./images/Line.svg" alt="-" />
+              <img
+                class="header__image-left-line"
+                src="./images/Line.svg"
+                alt="Кнопка"
+              />
               <img
                 class="header__image-right-line"
                 src="./images/Line.svg"
@@ -44,31 +36,37 @@
             </button>
           </div>
           <div class="header__popup-content">
-            <nav class="header__popup-links">
-              <a class="header__link" href="#coatings"
-                >Покрытия и градиенты</a
-              >
-              <a class="header__link" href="#Bicycles"
-                >Велосипеды</a
-              >
-              <a class="header__link" href="#workout"
-                >Тренировки</a
-              >
+            <nav class="header__popup-links" id="headerLinks">
+              <a class="header__link" href="#coatings">Покрытия и градиенты</a>
+              <a class="header__link" href="#bicycle">Велосипеды</a>
+              <a class="header__link" href="#workout">Тренировки</a>
             </nav>
             <div class="theme-button">
-              <img class="theme-button__light" src="./images/day.svg" alt="" />
-              <img class="theme-button__dark" src="./images/Sun.svg" alt="" />
-                <input
-                  class="theme-button__toggle"
-                  type="checkbox"
-                  id="togglePopup"
-                />
+              <img
+                class="theme-button__light"
+                src="./images/day.svg"
+                alt="Солнце"
+              />
+              <img
+                class="theme-button__dark"
+                src="./images/Sun.svg"
+                alt="Солнце"
+              />
+              <input
+                class="theme-button__toggle"
+                type="checkbox"
+                id="togglePopup"
+              />
               <img
                 class="theme-button__light"
                 src="./images/night.svg"
-                alt=""
+                alt="Луна"
               />
-              <img class="theme-button__dark" src="./images/moon.svg" alt="" />
+              <img
+                class="theme-button__dark"
+                src="./images/moon.svg"
+                alt="Луна"
+              />
             </div>
           </div>
         </div>
@@ -84,13 +82,13 @@
               <img
                 class="flex-element__image"
                 src="./images/forest.png"
-                alt=""
+                alt="Изображение"
               />
-                <img
-                  class="flex-element__bike-fix"
-                  src="./images/bike-fix.svg"
-                  alt=""
-                />
+              <img
+                class="flex-element__bike-fix"
+                src="./images/bike-fix.svg"
+                alt="Изображение"
+              />
             </div>
 
             <p class="text-block__paragraph text-block__paragraph_theme_dark">
@@ -99,27 +97,35 @@
               велосипеда и отправиться в путь.
             </p>
           </div>
-            <button class="flex-element__button">Подробнее</button>
+          <button class="flex-element__button">Подробнее</button>
           <p class="flex-element__text-line">
             Cannondale Systemsix<img
               class="flex-element__long-line"
               src="./images/lineLong.svg"
-              alt=""
+              alt="Иконка"
             />
           </p>
         </div>
         <div class="flex-element__popup flex-element__popup_display_none">
-          <img class="flex-element__image" src="./images/forest.png" alt="" />
-            <img
-              class="flex-element__bike-fix"
-              src="./images/bike-fix.svg"
-              alt=""
-            />
+          <img
+            class="flex-element__image"
+            src="./images/forest.png"
+            alt="Изображение"
+          />
+          <img
+            class="flex-element__bike-fix"
+            src="./images/bike-fix.svg"
+            alt="Изображение"
+          />
         </div>
       </section>
 
       <section class="quote">
-        <img class="quote__image" src="./images/Placeholder.png" alt="" />
+        <img
+          class="quote__image"
+          src="./images/Placeholder.png"
+          alt="Изображение"
+        />
         <div class="quote__container">
           <p class="quote__quotation">
             «Катайся много или мало, долго или коротко, как хочешь - но катайся»
@@ -127,10 +133,10 @@
           <div class="quote__description">
             <p class="quote__author">Эдди Меркс</p>
             <p class="quote__occupation">Велогонщик</p>
+            <a name="coatings"></a>
           </div>
         </div>
       </section>
-
       <section class="road" id="roadHighway">
         <div class="text-block">
           <h1 class="text-block__title">Шоссе</h1>
@@ -143,10 +149,14 @@
           </p>
         </div>
         <div class="road__images">
-          <img class="road__image" src="./images/road1.png" alt="" />
-          <img class="road__image" src="./images/road2.png" alt="" />
-            <img class="road__green-sign" src="./images/biggreen.svg" alt="" />
-            <img class="road__line" src="./images/line1.svg" alt="" />
+          <img class="road__image" src="./images/road1.png" alt="Изображение" />
+          <img class="road__image" src="./images/road2.png" alt="Изображение" />
+          <img
+            class="road__green-sign"
+            src="./images/biggreen.svg"
+            alt="Изображение"
+          />
+          <img class="road__line" src="./images/line1.svg" alt="Изображение" />
         </div>
         <div class="road__buttons-arrows">
           <button class="road__arrows" id="arrowLeft" type="button">
@@ -181,6 +191,7 @@
           будь то горы или равнины. Гонки проходят в командном пелотоне, но
           тренироваться можно и самостоятельно.
         </p>
+        <a name="bicycle"></a>
       </section>
 
       <section class="road" id="roadGravel">
@@ -199,11 +210,15 @@
             class="road__image"
             id="roadImage"
             src="./images/road2.png"
-            alt=""
+            alt="Изображение"
           />
-          <img class="road__image" src="./images/road3.png" alt="" />
-          <img class="road__green-sign" src="./images/biggreen.svg" alt="" />
-          <img class="road__line" src="./images/line2.svg" alt="" />
+          <img class="road__image" src="./images/road3.png" alt="Изображение" />
+          <img
+            class="road__green-sign"
+            src="./images/biggreen.svg"
+            alt="Изображение"
+          />
+          <img class="road__line" src="./images/line2.svg" alt="Изображение" />
         </div>
         <div class="road__buttons-arrows">
           <button class="road__arrows" id="arrowLeftGravel" type="button">
@@ -256,7 +271,7 @@
             class="road__image"
             id="roadImageTT"
             src="./images/road3.png"
-            alt=""
+            alt="Изображение"
           />
           <img class="road__image" src="./images/road1.png" alt="" />
           <img class="road__green-sign" src="./images/biggreen.svg" alt="" />
@@ -296,13 +311,16 @@
           аэродинамичный.
         </p>
       </section>
-
       <section class="bicycles">
         <div class="bicycles__container">
           <h2 class="bicycles__title">Велосипеды</h2>
           <div class="bicycles__dropdown">
             <nav class="bicycles__buttons bicycles__buttons_margin_minus">
-              <img class="bicycles__icon" src="./images/Vector.svg" alt="" />
+              <img
+                class="bicycles__icon"
+                src="./images/Vector.svg"
+                alt="Иконка"
+              />
               <button class="bicycles__button bicycles__button_highway">
                 Шоссе
               </button>
@@ -324,7 +342,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Cervelo-Caledonia-5.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -343,7 +361,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Cannondale-Systemsix-Himod.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -362,7 +380,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Trek-Domane-SL-7.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -383,7 +401,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Cervelo-Aspero-GRX-810.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -402,7 +420,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Specialized-S-Works-Diverge.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -420,7 +438,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Cannondale-Topstone-Lefty-3.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -441,7 +459,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Specialized-S-Works-Shiv.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -460,7 +478,7 @@
               <img
                 class="bicycles__image"
                 src="./images/BMC-Timemachine-01-ONE.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -479,7 +497,7 @@
               <img
                 class="bicycles__image"
                 src="./images/Cervelo-P-Series.png"
-                alt=""
+                alt="Изображение"
               />
             </a>
             <a
@@ -495,6 +513,7 @@
           <span class="bicycles__slider-dot" onclick="currentSlide(2)"></span>
           <span class="bicycles__slider-dot" onclick="currentSlide(3)"></span>
         </div>
+        <a name="workout"></a>
       </section>
 
       <section class="training">
@@ -505,7 +524,7 @@
               <img
                 class="training__image-mobile"
                 src="./images/Train.png"
-                alt=""
+                alt="Изображение"
               />
               <p
                 class="text-block__paragraph text-block__paragraph_weight_value text-block__paragraph_theme_dark"
@@ -531,7 +550,11 @@
               >
             </nav>
           </div>
-          <img class="training__image" src="./images/Train.png" alt="" />
+          <img
+            class="training__image"
+            src="./images/Train.png"
+            alt="Изображение"
+          />
         </div>
       </section>
     </main>
@@ -554,10 +577,14 @@
       </div>
       <div class="footer__container">
         <p class="footer__copyright">&#169; Road Club 2021</p>
-        <img class="footer__logo" src="./images/logoFooter.svg" alt="" />
+        <img class="footer__logo" src="./images/logoFooter.svg" alt="Логотип" />
         <div class="theme-button theme-button_display_none">
-          <img class="theme-button__light" src="./images/day.svg" alt="" />
-          <img class="theme-button__dark" src="./images/Sun.svg" alt="" />
+          <img
+            class="theme-button__light"
+            src="./images/day.svg"
+            alt="Солнце"
+          />
+          <img class="theme-button__dark" src="./images/Sun.svg" alt="Солнце" />
           <div class="theme-button__input-container">
             <input
               class="theme-button__toggle"
@@ -565,12 +592,16 @@
               id="toggleFooter"
             />
           </div>
-          <img class="theme-button__light" src="./images/night.svg" alt="" />
-          <img class="theme-button__dark" src="./images/moon.svg" alt="" />
+          <img
+            class="theme-button__light"
+            src="./images/night.svg"
+            alt="Луна"
+          />
+          <img class="theme-button__dark" src="./images/moon.svg" alt="Луна" />
         </div>
       </div>
     </footer>
-    
+
     <script src="./scripts/scripts.js"></script>
   </body>
 </html>
